--- a/Notes/notes-cache.yaml
+++ b/Notes/notes-cache.yaml
@@ -70,7 +70,7 @@ options:
   intermediatePostScript: false
 files:
   dicy-instance.yaml-ParsedYAML:
-    timeStamp: 2020-03-18T15:19:45.335Z
+    timeStamp: 2020-03-18T16:18:27.018Z
     jobNames: []
     value:
       severity: info
@@ -128,13 +128,13 @@ files:
       intermediatePostScript: false
     type: ParsedYAML
   notes.tex:
-    timeStamp: 2020-03-18T15:19:44.674Z
+    timeStamp: 2020-03-18T16:39:07.838Z
     jobNames: []
-    hash: 2/WjYQuV0yvnzOh0JUxCSyrtNvQDRExlfIcYHGlv3D8=
+    hash: VZgsuQHqjP/sUeJI1mbWP1sESNkyAhjRLt3WpWWLM9w=
     type: LaTeX
     subType: article
   /home/johnandrew/.config/dicy/config.yaml:
-    timeStamp: 2020-03-18T15:19:45.343Z
+    timeStamp: 2020-03-18T16:18:27.023Z
     jobNames: []
     type: YAML
   x.y-Nil:
@@ -284,7 +284,7 @@ files:
       calls: []
     type: ParsedFileListing
   notes.log-ParsedLaTeXLog:
-    timeStamp: 2020-03-18T15:15:19.505Z
+    timeStamp: 2020-03-18T16:39:08.515Z
     jobNames: []
     value:
       messages:
@@ -1627,13 +1627,13 @@ files:
           source:
             file: notes.tex
             range:
-              start: 549
-              end: 549
+              start: 577
+              end: 577
           log:
             file: notes.log
             range:
-              start: 820
-              end: 820
+              start: 825
+              end: 825
         - severity: info
           name: pdfTeX
           category: Package atveryend
@@ -1641,13 +1641,13 @@ files:
           source:
             file: notes.tex
             range:
-              start: 549
-              end: 549
+              start: 577
+              end: 577
           log:
             file: notes.log
             range:
-              start: 824
-              end: 824
+              start: 829
+              end: 829
         - severity: info
           name: pdfTeX
           category: Package atveryend
@@ -1655,13 +1655,13 @@ files:
           source:
             file: notes.tex
             range:
-              start: 549
-              end: 549
+              start: 577
+              end: 577
           log:
             file: notes.log
             range:
-              start: 828
-              end: 828
+              start: 833
+              end: 833
         - severity: info
           name: pdfTeX
           category: Package atveryend
@@ -1669,13 +1669,13 @@ files:
           source:
             file: notes.tex
             range:
-              start: 549
-              end: 549
+              start: 577
+              end: 577
           log:
             file: notes.log
             range:
-              start: 829
-              end: 829
+              start: 834
+              end: 834
         - severity: info
           name: pdfTeX
           category: Package rerunfilecheck
@@ -1687,8 +1687,8 @@ files:
           log:
             file: notes.log
             range:
-              start: 830
-              end: 831
+              start: 835
+              end: 836
         - severity: info
           name: pdfTeX
           category: Package atveryend
@@ -1696,46 +1696,46 @@ files:
           source:
             file: notes.tex
             range:
-              start: 549
-              end: 549
+              start: 577
+              end: 577
           log:
             file: notes.log
             range:
-              start: 832
-              end: 832
+              start: 837
+              end: 837
       inputs: []
       outputs:
         - notes.pdf
       calls: []
     type: ParsedLaTeXLog
   notes.aux:
-    timeStamp: 2020-03-18T15:19:46.435Z
+    timeStamp: 2020-03-18T16:39:08.462Z
     jobNames: []
-    hash: 9mHLKUg0sJZMKiJx4MfJsV1cdDsECIQxrwlHIukanks=
+    hash: LcJdOQZG5gmKsOZMjrVloaeIQId9G0PQkgjSsdd7tZ0=
     type: LaTeXAuxilary
   notes.fls:
-    timeStamp: 2020-03-18T15:19:46.467Z
+    timeStamp: 2020-03-18T16:39:08.478Z
     jobNames: []
     hash: 2pfDS2hYAyeaaGJvOKJfYJFFS7cU4L5JzOmheOgMpn4=
     type: FileListing
   notes.log:
-    timeStamp: 2020-03-18T15:19:46.479Z
+    timeStamp: 2020-03-18T16:39:08.486Z
     jobNames: []
-    hash: xt6+ZDY/n2tIac1B5pUteZfo8mnzmenHWKHIvEakkeg=
+    hash: 73gXwWZHicybzY5HLJQ1H/cRAnapDTDDfBQuvIcJj1E=
     type: LaTeXLog
     subType: pdfTeX
   notes.synctex.gz:
-    timeStamp: 2020-03-18T15:19:46.479Z
+    timeStamp: 2020-03-18T16:39:08.486Z
     jobNames: []
-    hash: B1C3Y0otwO5BgrWm8FyD9l2ovT7qu309VRChlqXfBLw=
+    hash: UaS//e3ez6GFVf+6nLT1luDL8I3jUvwxD9BJEfWw2PM=
     type: SyncTeX
   notes.pdf:
-    timeStamp: 2020-03-18T15:19:46.479Z
+    timeStamp: 2020-03-18T16:39:08.486Z
     jobNames: []
-    hash: 7u6nk1NpI1H9okk1a/odZgSC9N2PVCCuGhado96RZSk=
+    hash: qp77fRGXjC8NXGxjyzIZzLC+kbwheMkKkE7QylnOtdA=
     type: PortableDocumentFormat
   notes.aux-ParsedLaTeXAuxilary:
-    timeStamp: 2020-03-18T15:01:40.474Z
+    timeStamp: 2020-03-18T16:38:26.171Z
     jobNames: []
     value:
       commands:
@@ -1787,7 +1787,12 @@ files:
         - citation
         - citation
         - '@writefile'
+        - citation
+        - citation
+        - newlabel
         - bibdata
+        - bibcite
+        - bibcite
         - bibcite
         - bibcite
         - bibcite
@@ -2121,7 +2126,7 @@ files:
     timeStamp: 2019-12-07T22:47:04.558Z
     jobNames: []
   notes.blg-ParsedBibTeXLog:
-    timeStamp: 2019-12-20T12:38:50.970Z
+    timeStamp: 2020-03-18T15:58:09.733Z
     jobNames: []
     value:
       messages: []
@@ -2133,13 +2138,13 @@ files:
       calls: []
     type: ParsedBibTeXLog
   notes.bbl:
-    timeStamp: 2020-03-18T15:19:46.023Z
+    timeStamp: 2020-03-18T16:39:08.234Z
     jobNames: []
-    hash: Qh5/dGNRxei+xWAOfGpJuxlchzvikyZDFLKOoYANhfU=
+    hash: ME0f2/WLfeFJHLEwWS2Wx9nN52HH0n7hG6uOYs1Xi1U=
   notes.blg:
-    timeStamp: 2020-03-18T15:19:46.023Z
+    timeStamp: 2020-03-18T16:39:08.234Z
     jobNames: []
-    hash: I5ez0X0dkxIf8KZbGgAdMKN7XLWlMgwj3tZGEiS5ybc=
+    hash: iNDZHbxjvWb7rnUNr/20c1AaADlNBygP7A116RwSI0s=
     type: BibTeXLog
     subType: BibTeX
   /usr/share/texlive/texmf-dist/tex/generic/oberdiek/gettitlestring.sty:
@@ -2184,7 +2189,7 @@ files:
     jobNames: []
     type: LaTeXStyle
   notes.out:
-    timeStamp: 2020-03-18T15:19:46.435Z
+    timeStamp: 2020-03-18T16:39:08.462Z
     jobNames: []
     hash: T0VbdyF94sRw3e1UlhU5F6gmh+b3RFfH0FlBvv31rDU=
     type: OUT
